# NLP2025

./: README.md  github_setup.sh  pyproject.toml
nbs/: class1.ipynb  class2.ipynb  class3.ipynb  classification_pipeline.ipynb
