[project]
name = "repo_demo"
version = "0.1.0"
description = "NLP virtual environment 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "scikit-learn>=1.7.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

# in terminal: uv sync -> uv add ipykernel -> source .venv/bin/activate
# uv add ___ to add packages
# uv pip list to get all packages in env
# uv sync if you update this file and want to implement in env
# documentation https://docs.astral.sh/uv/ 